[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/hud/debug/VehicleLightsDebug.gd" type="Script" id=1]

[node name="VehicleLightsDebug" type="GridContainer"]
margin_right = 197.0
margin_bottom = 32.0
columns = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManagerLabel" type="Label" parent="."]
margin_right = 143.0
margin_bottom = 14.0
text = "VehicleLightsManager:"
align = 2

[node name="ManagerValue" type="Label" parent="."]
margin_left = 147.0
margin_right = 147.0
margin_bottom = 14.0

[node name="LightSumLabel" type="Label" parent="."]
margin_top = 18.0
margin_right = 143.0
margin_bottom = 32.0
text = "All lights in vehicle:"
align = 2

[node name="LightSumValue" type="Label" parent="."]
margin_left = 147.0
margin_top = 18.0
margin_right = 147.0
margin_bottom = 32.0

[node name="LightModeLabel" type="Label" parent="."]
margin_top = 36.0
margin_right = 143.0
margin_bottom = 50.0
align = 2

[node name="LightModeValue" type="Label" parent="."]
margin_left = 147.0
margin_top = 36.0
margin_right = 147.0
margin_bottom = 50.0

[node name="ModeLightsLabel" type="Label" parent="."]
margin_top = 54.0
margin_right = 143.0
margin_bottom = 68.0
text = "Active light nodes:"
align = 2

[node name="ModeLightsValue" type="Label" parent="."]
margin_left = 147.0
margin_top = 54.0
margin_right = 147.0
margin_bottom = 68.0

[node name="LightModeTimer" type="Timer" parent="."]
wait_time = 4.0
